Ajout responsive phone part1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <form class="search" action="#">
             <label for="search" class="ico-search"><i id="black-color" class="fa-solid fa-location-dot"></i></label>
             <input type="text" class ="input-search"name="ville" id="search" value="Marseille, France" placeholder="Saisir la ville">
-            <input type="submit" class="btn-search"name="search" value="Rechercher">
+            <button type="submit" class="btn-search" name="search"><span id="transformation">Rechercher</span><i class="fa-solid fa-magnifying-glass" id="white-color"></i></button>
         </form>
 
         <!--Deuxieme <form> pour les filtres-->
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="info">
-            <img src="images/ico_info.png" alt="Icône information">
+            <i class="fa-solid fa-info"></i>
             <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
     </header>
