Mobile CSS: Fin activite + barre de recherche

--- a/index.html
+++ b/index.html
@@ -27,14 +27,12 @@
             <h1>Trouvez votre hébergements pour des vacances de rêve</h1>
             <p>En plein centre-ville ou en pleine nature</p>
         </div>
-        <!--Premier <form> pour le champ de recherche de ville-->
+        <!--<form> pour le champ de recherche de ville-->
         <form class="search" action="#">
             <label for="search" class="ico-search"><i id="black-color" class="fa-solid fa-location-dot"></i></label>
             <input type="text" class ="input-search"name="ville" id="search" value="Marseille, France" placeholder="Saisir la ville">
             <button type="submit" class="btn-search" name="search"><span id="transformation">Rechercher</span><i class="fa-solid fa-magnifying-glass" id="white-color"></i></button>
         </form>
-
-        <!--Deuxieme <form> pour les filtres-->
         <div class="filtres">
             <h2>Filtres</h2>
             <div class="filtres-btn">
