--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/png" href="images/favico.png">
     <title>Booki</title>
@@ -30,7 +30,7 @@
         <!--<form> pour le champ de recherche de ville-->
         <form class="search" action="#">
             <label for="search" class="ico-search"><i id="black-color" class="fa-solid fa-location-dot"></i></label>
-            <input type="text" class ="input-search"name="ville" id="search" value="Marseille, France" placeholder="Saisir la ville">
+            <input type="text" class ="input-search" name="ville" id="search" value="Marseille, France" placeholder="Saisir la ville">
             <button type="submit" class="btn-search" name="search"><span id="transformation">Rechercher</span><i class="fa-solid fa-magnifying-glass" id="white-color"></i></button>
         </form>
         <div class="filtres">
